# yaponmdl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: LICENSE
docs/: README.md  gmo_file_format.md  gxp_file_format.md  gxp_patapon.hexpat
src/: application.cpp  application.hpp  constsplitter.cpp  constsplitter.hpp  glview.cpp  glview.hpp  hexview.cpp  hexview.hpp  main.cpp  modelconv.cpp  modelconv.hpp  modeldisplay.cpp  modeldisplay.hpp  modelview.cpp  modelview.hpp  resourcestore.cpp  resourcestore.hpp  textureview.cpp  textureview.hpp  thirdparty.cpp
src/common/: binaryreader.cpp  binaryreader.hpp  byteutils.cpp  byteutils.hpp  common.hpp  fixedqueue.hpp  genpool.hpp
src/formats/: act.cpp  act.hpp  gmo.cpp  gmo.hpp  gmodef.hpp  gmostring.hpp  gxp.cpp  gxp.hpp  gxt.cpp  gxt.hpp  gxx.cpp  gxx.hpp  pspgu.hpp  pssg.cpp  pssg.hpp
src/graphics/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  gl.cpp  gl.hpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/modconv/: actconvert.cpp  gmoconvert.cpp  gxxconvert.cpp  modelconvert.hpp
src/render/: camera.cpp  camera.hpp  device.cpp  device.hpp  drawlist.cpp  drawlist.hpp  model.cpp  model.hpp  render.hpp  text.cpp  text.hpp
src/shaders/: frag_checker.glsl  frag_grid.glsl  frag_mesh.glsl  frag_postfilter.glsl  frag_text.glsl  frag_texture.glsl  vert_grid.glsl  vert_postfilter.glsl  vert_skinmesh.glsl  vert_staticmesh.glsl  vert_text.glsl  vert_texture.glsl
tools/: embed_file.py
